fix size on tablets

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  height: 100%;
 }
 *,
 *:before,
@@ -37,6 +38,10 @@ button {
   border-color: #4cae4c;
 }
 
+.container {
+  height: 100%;
+}
+
 .app {
   display: flex;
   flex-wrap: nowrap;
@@ -46,7 +51,6 @@ button {
 
 .kegWrapper {
   width: 50%;
-  margin-top: 20px;
 }
 
 .kegWrapper .brewName {
@@ -54,26 +58,36 @@ button {
   font-size: 30px;
   margin: 10px;
   min-height: 35px;
+  display: block;
   -webkit-user-select: none;
   user-select: none;
 }
 
+.tempAndHumidity {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 65%;
+}
+
 .tempAndHumidity small {
-  font-size: 10px;
+  font-size: 15px;
   display: block;
+  line-height: 1.5;
 }
 
 .temp,
 .humidity {
   margin: 20px auto 0;
   background: #272727;
-  width: 80px;
+  width: 120px;
   padding: 10px;
-  height: 80px;
+  height: 120px;
   border: 1px solid;
-  line-height: 1.3;
+  line-height: 1.2;
   text-align: center;
-  font-size: 30px;
+  font-size: 50px;
+  /* flex-grow: 1; */
   border-radius: 50%;
   position: relative;
 }
@@ -138,25 +152,26 @@ button {
 
 .kegGraph {
   margin: 10px;
-  height: 200px;
+  height: 400px;
   overflow: hidden;
 }
 .kegGraph .keg {
-  height: 200px;
-  width: 90px;
+  height: 400px;
+  width: auto;
   margin: 0 auto;
   position: relative;
   z-index: 1;
   line-height: 1.5;
   text-align: center;
+  font-size: 34px;
   background: url(keg.svg) center center no-repeat;
 }
 .kegGraph .progress {
   background: #ffa500;
   height: 100%;
-  width: 68px;
-  bottom: 16px;
-  height: 156px;
+  width: 134px;
+  bottom: 32px;
+  height: 312px;
   margin: 0 auto;
   position: relative;
   transition: all .2s ease;
@@ -222,5 +237,4 @@ button {
   float: right;
   width: 65px;
   margin-left: 10px;
-  padding: 1px 4px;
-}
+  padding: 1px;
